--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.0.0-alpha.0",
-    "dangerous-html": "^0.1.13",
-    "firebase": "^9.23.0",
-    "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0"
+    "prop-types": "15.7.2",
+    "dangerous-html": "^0.1.13"
   },
   "scripts": {
     "start": "craco start",
